cleaned up 2d&3d case

--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -49,21 +49,29 @@
     "    N = R.shape[0]\n",
     "    D = np.empty((6, N*3))\n",
     "\n",
+    "    \n",
     "    for i in range(N):\n",
     "        for j in range(3):\n",
     "            D[3,i*3+j] = np.dot(R[i],X[1])*X[j,2]-np.dot(R[i],X[2])*X[j,1]\n",
     "            D[4,i*3+j] = np.dot(R[i],X[2])*X[j,0]-np.dot(R[i],X[0])*X[j,2]  \n",
     "            D[5,i*3+j] = np.dot(R[i],X[0])*X[j,1]-np.dot(R[i],X[1])*X[j,0]\n",
     "            \n",
-    "            D[3,i*3+j] = np.dot(R[i],X[:,1])*X[j,2]-np.dot(R[i],X[:,2])*X[j,1]\n",
-    "            D[4,i*3+j] = np.dot(R[i],X[:,2])*X[j,0]-np.dot(R[i],X[:,0])*X[j,2]  \n",
-    "            D[5,i*3+j] = np.dot(R[i],X[:,0])*X[j,1]-np.dot(R[i],X[:,1])*X[j,0]\n",
-    "\n",
     "    for i in range(len(R)):\n",
     "        D[:3,i*3:i*3+3] = np.eye(3)\n",
     "\n",
+    "    # if colinear\n",
+    "    badOnes = []\n",
+    "    for i in range(len(D)):\n",
+    "        if np.allclose(D[i],np.zeros_like(D[i])):\n",
+    "            badOnes.append(i)\n",
+    "    for i in range(len(badOnes)):\n",
+    "        index = badOnes[i]-i\n",
+    "        D = np.append(D[:index],D[index+1:],0)\n",
+    "            \n",
+    "        \n",
     "    for i in range(len(D)):\n",
     "        D[i] /= np.linalg.norm(D[i])\n",
+    "            \n",
     "    return D\n",
     "\n",
     "\n",
@@ -108,17 +116,17 @@
     "        proj /= np.linalg.norm(proj)\n",
     "        proj = np.abs(proj)\n",
     "        \n",
-    "        H[start,:,start,:] += np.eye(k)*proj\n",
-    "        H[stop,:,stop,:] += np.eye(k)*proj\n",
-    "        H[start,:,stop,:] += -np.eye(k)*proj\n",
-    "        H[stop,:,start,:] += -np.eye(k)*proj\n",
+    "        H[start,:,start,:] += np.eye(k)#*proj\n",
+    "        H[stop,:,stop,:] += np.eye(k)#*proj\n",
+    "        H[start,:,stop,:] += -np.eye(k)#*proj\n",
+    "        H[stop,:,start,:] += -np.eye(k)#*proj\n",
     "        \n",
     "    H = H.reshape((N*k,N*k))\n",
     "    \n",
     "    # get eigenvalues\n",
     "    l, v = np.linalg.eigh(H)\n",
     "    v = v.T\n",
-    "\n",
+    "    \n",
     "    # move to translating and rotating frame\n",
     "    if k==2:\n",
     "        I = inertiaAxes2d(R[:,0], R[:,1])\n",
@@ -129,32 +137,27 @@
     "        \n",
     "    I_prime, X = np.linalg.eigh(I)\n",
     "    \n",
+    "    \n",
     "    if k==2:\n",
     "        D = zeroModes2d(R,X) \n",
     "    elif k==3:\n",
     "        D = zeroModes3d(R,X) \n",
+    "\n",
+    "\n",
     "    \n",
-    "    print(D.round(3))\n",
-    "    for i in range(len(D)):\n",
-    "        D[i] = D[i] / np.linalg.norm(D[i])\n",
-    "    for i in range(len(v)):\n",
-    "        v[i] = v[i] / np.linalg.norm(v[i])\n",
-    "        \n",
     "    # create new basis that is moving and ortho\n",
     "    for i in range(len(v)):\n",
     "\n",
     "        remainder = remainder = v[i] - np.sum((D @ v[i]).reshape(-1,1) * D, 0)\n",
     "        norm = np.linalg.norm(remainder)\n",
+    "\n",
     "        if norm>threshold:\n",
-    "            print(norm)\n",
     "            remainder /= norm\n",
     "            v[i] = remainder\n",
     "            D = np.append(D, remainder.reshape(1,-1), 0)\n",
     "        else:\n",
     "            v[i] = np.zeros_like(v[i])\n",
-    "            \n",
-    "            \n",
-    "    \n",
+    "\n",
     "\n",
     "#     if not np.allclose(D @ D.T, np.eye(len(H))):\n",
     "#         raise Exception(\"D is not ortho\")\n",
