the two spring models look weird

--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -156,7 +156,8 @@
     "            v[i] = remainder\n",
     "            D = np.append(D, remainder.reshape(1,-1), 0)\n",
     "        else:\n",
-    "            v[i] = np.zeros_like(v[i])\n",
+    "            pass\n",
+    "            #v[i] = np.zeros_like(v[i])\n",
     "\n",
     "\n",
     "#     if not np.allclose(D @ D.T, np.eye(len(H))):\n",
