--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -73,8 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot2d(R, v):\n",
-    "    scale = .1\n",
+    "def plot2d(R, v, scale=.5):\n",
     "\n",
     "    for i in range(len(v)):\n",
     "        if np.allclose(v[i], np.zeros(v.shape[1])): continue\n",
@@ -82,7 +81,7 @@
     "        plt.ylim((-1.5,1.5))\n",
     "        for j in range(len(R)):\n",
     "            x, y, = R[j]\n",
-    "            plt.arrow(x,y, v[i,j*2]*scale, v[i,j*2+1]*scale, width=.01)        \n",
+    "            plt.arrow(x,y, v[i,j*2]*scale, v[i,j*2+1]*scale, width=scale*.1)        \n",
     "        plt.show()"
    ]
   },
@@ -92,11 +91,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot(R, v):\n",
+    "def plot(R, v, *args):\n",
     "    if R.shape[1]==2:\n",
-    "        plot2d(R, v)\n",
+    "        plot2d(R, v, *args)\n",
     "    else:\n",
-    "        return visualize_normal_modes(R, v.T, cols=4)"
+    "        return visualize_normal_modes(R, v.T, *args)"
    ]
   }
  ],
