figured out what was going on with 2 springs off axis

--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -97,6 +97,46 @@
     "    else:\n",
     "        return visualize_normal_modes(R, v.T, *args)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interactive\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumBasis(R, D, scale=.5):\n",
+    "    \n",
+    "    def plotC(**c):\n",
+    "\n",
+    "        vSum = np.zeros(D.shape[1])\n",
+    "        for key, value in c.items():\n",
+    "            vSum += value*D[int(key)]\n",
+    "\n",
+    "        plt.figure(2)\n",
+    "        for i in range(len(R)):\n",
+    "            plt.arrow(R[i,0],R[i,1],vSum[i*2]*scale,vSum[i*2+1]*scale, width=scale*.1)        \n",
+    "        plt.xlim(-2,2)\n",
+    "        plt.ylim(-2,2)\n",
+    "        \n",
+    "    args = {}\n",
+    "    for i in range(len(D)):\n",
+    "        args[str(i)] = (-1.5, 1.5, .05)\n",
+    "        \n",
+    "    interactive_plot = interactive(plotC, **args)\n",
+    "\n",
+    "    return interactive_plot"
+   ]
   }
  ],
  "metadata": {
