--- a/two springs in 2d - off axis.ipynb
+++ b/two springs in 2d - off axis.ipynb
@@ -68,12 +68,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "l[~np.array([np.allclose(x,np.zeros_like(x))for x in v])].round(2)"
+    "3, .6\n",
+    "4, .1\n",
+    "5, -1.1"
    ]
   },
   {
@@ -82,16 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l[np.array([np.allclose(x,np.zeros_like(x))for x in v])].round(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(R, v)"
+    "%matplotlib inline\n",
+    "sumBasis(R,D)"
    ]
   },
   {
