--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -116,10 +116,10 @@
     "        proj /= np.linalg.norm(proj)\n",
     "        proj = np.abs(proj)\n",
     "        \n",
-    "        H[start,:,start,:] += np.eye(k)#*proj\n",
-    "        H[stop,:,stop,:] += np.eye(k)#*proj\n",
-    "        H[start,:,stop,:] += -np.eye(k)#*proj\n",
-    "        H[stop,:,start,:] += -np.eye(k)#*proj\n",
+    "        H[start,:,start,:] += np.eye(k)*proj\n",
+    "        H[stop,:,stop,:] += np.eye(k)*proj\n",
+    "        H[start,:,stop,:] += -np.eye(k)*proj\n",
+    "        H[stop,:,start,:] += -np.eye(k)*proj\n",
     "        \n",
     "    H = H.reshape((N*k,N*k))\n",
     "    \n",
@@ -137,7 +137,7 @@
     "        \n",
     "    I_prime, X = np.linalg.eigh(I)\n",
     "    \n",
-    "    \n",
+    "    # calculate the translating and rotating frames\n",
     "    if k==2:\n",
     "        D = zeroModes2d(R,X) \n",
     "    elif k==3:\n",
