getting ready to do as a presentation

--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -112,10 +112,11 @@
     "    # calculate H\n",
     "    H = np.zeros((N,k,N,k))\n",
     "    for i, (start, stop) in enumerate(springs):\n",
-    "        proj = R[stop]-R[start]\n",
+    "        # strength of spring in each dimen.\n",
+    "        proj = np.abs(R[stop]-R[start])\n",
     "        proj /= np.linalg.norm(proj)\n",
-    "        proj = np.abs(proj)\n",
-    "        \n",
+    "        # force on x1 connected to x2\n",
+    "        #   is k(x2-x1)  \n",
     "        H[start,:,start,:] += np.eye(k)*proj\n",
     "        H[stop,:,stop,:] += np.eye(k)*proj\n",
     "        H[start,:,stop,:] += -np.eye(k)*proj\n",
