--- a/two springs in 2d - off axis.ipynb
+++ b/two springs in 2d - off axis.ipynb
@@ -68,12 +68,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "3, .6\n",
-    "4, .1\n",
-    "5, -1.1"
+    "%matplotlib inline\n",
+    "sumBasis(R,D)"
    ]
   },
   {
@@ -82,8 +83,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "sumBasis(R,D)"
+    "A = np.array([0, -1, -.5, .5, .5, .5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A /= np.linalg.norm(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = D @ A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z /= np.linalg.norm(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z.round(3)"
    ]
   },
   {
