--- a/single spring in 2d.ipynb
+++ b/single spring in 2d.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H.round(3)"
+    "plot(R, D[:3])"
    ]
   },
   {
@@ -63,34 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v.round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D.round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(R, v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(R, D)"
+    "plot(R, D[3:])"
    ]
   },
   {
