--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -113,14 +113,17 @@
     "    H = np.zeros((N,k,N,k))\n",
     "    for i, (start, stop) in enumerate(springs):\n",
     "        # strength of spring in each dimen.\n",
-    "        proj = np.abs(R[stop]-R[start])\n",
+    "        proj = R[stop]-R[start]\n",
     "        proj /= np.linalg.norm(proj)\n",
+    "        \n",
+    "        #proj *= -np.sign(proj)\n",
+    "        \n",
     "        # force on x1 connected to x2\n",
     "        #   is k(x2-x1)  \n",
-    "        H[start,:,start,:] += np.eye(k)*proj\n",
-    "        H[stop,:,stop,:] += np.eye(k)*proj\n",
-    "        H[start,:,stop,:] += -np.eye(k)*proj\n",
-    "        H[stop,:,start,:] += -np.eye(k)*proj\n",
+    "        H[start,:,start,:] += np.eye(k)*proj**2\n",
+    "        H[stop,:,stop,:] += np.eye(k)*proj**2\n",
+    "        H[start,:,stop,:] += -np.eye(k)*proj**2\n",
+    "        H[stop,:,start,:] += -np.eye(k)*proj**2\n",
     "        \n",
     "    H = H.reshape((N*k,N*k))\n",
     "    \n",
