--- a/experimental/two springs in 2d - on axis.ipynb
+++ b/experimental/two springs in 2d - on axis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run Calculating.ipynb"
+    "%run ../Calculating.ipynb"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run Plotting.ipynb"
+    "%run ../Plotting.ipynb"
    ]
   },
   {
