the bewilderment continues

--- a/experimental/two springs in 2d - off axis.ipynb
+++ b/experimental/two springs in 2d - off axis.ipynb
@@ -121,7 +121,20 @@
    "outputs": [],
    "source": [
     "Energy(R, springs, np.array([\n",
-    "    [-1., 1],\n",
+    "    [0., 0],\n",
+    "    [-1, 1],\n",
+    "    [1, 1]\n",
+    "]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Energy(R, springs, np.array([\n",
+    "    [1., 1],\n",
     "    [0, 0],\n",
     "    [0, 0]\n",
     "]))"
@@ -305,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.linalg.eigh(H)[0].round(2)"
+    "np.linalg.eigh(-H)[0].round(2)"
    ]
   },
   {
@@ -315,6 +328,67 @@
    "outputs": [],
    "source": [
     "(H @ D[3].reshape(-1,1)).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([0., 0, -1, 1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A /= np.linalg.norm(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "((-H) @ A.reshape(-1,1)).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Energy(R, springs, displacements=A.reshape(3,2))"
    ]
   },
   {
