--- a/experimental/two springs in 2d - on axis.ipynb
+++ b/experimental/two springs in 2d - on axis.ipynb
@@ -129,24 +129,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "R"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "H.round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "np.linalg.eigh(H)[0].round(2)"
    ]
   },
@@ -276,6 +258,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(30):\n",
+    "    R = np.array([\n",
+    "        [0., 0],\n",
+    "        [1, i*.05],\n",
+    "        [-1, i*.05],\n",
+    "    ])\n",
+    "\n",
+    "    H, l, v, D = calc(R, springs)\n",
+    "    \n",
+    "    print(l.round(4))\n",
+    "    \n",
+    "    print('displacement',0.05*i)\n",
+    "    plot(R, D[3:])\n"
+   ]
   },
   {
    "cell_type": "code",
