removed error with squared projection

--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -15,6 +15,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def projectOut(basis, vector):\n",
+    "    projection = basis * (basis@vector)\n",
+    "    vector = vector - projection\n",
+    "    return vector, np.linalg.norm(vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# calc inertia axes\n",
     "def inertiaAxes3d(x,y,z):\n",
     "    I = np.empty((3,3))\n",
@@ -97,6 +109,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def potential(R, springs, displacements):\n",
+    "    V = 0\n",
+    "    for i, (start, stop) in enumerate(springs):\n",
+    "        springVector = R[stop]-R[start]\n",
+    "        moveVector = np.abs(displacements[stop]-displacements[start])\n",
+    "        v = moveVector - moveVector*(moveVector@springVector)/(springVector@springVector)\n",
+    "        V += .5 * 1 * (v@v)\n",
+    "    return V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def calc(R, springs, threshold=0.01):\n",
     "    \n",
     "    # get parameters\n",
@@ -113,17 +141,15 @@
     "    H = np.zeros((N,k,N,k))\n",
     "    for i, (start, stop) in enumerate(springs):\n",
     "        # strength of spring in each dimen.\n",
-    "        proj = R[stop]-R[start]\n",
-    "        proj /= np.linalg.norm(proj)\n",
-    "        \n",
-    "        #proj *= -np.sign(proj)\n",
-    "        \n",
+    "        springVector = np.abs(R[stop]-R[start])\n",
+    "        springVector /= np.linalg.norm(springVector)\n",
+    "                \n",
     "        # force on x1 connected to x2\n",
     "        #   is k(x2-x1)  \n",
-    "        H[start,:,start,:] += np.eye(k)*proj**2\n",
-    "        H[stop,:,stop,:] += np.eye(k)*proj**2\n",
-    "        H[start,:,stop,:] += -np.eye(k)*proj**2\n",
-    "        H[stop,:,start,:] += -np.eye(k)*proj**2\n",
+    "        H[start,:,start,:] += np.eye(k)*springVector\n",
+    "        H[stop,:,stop,:] += np.eye(k)*springVector\n",
+    "        H[start,:,stop,:] += -np.eye(k)*springVector\n",
+    "        H[stop,:,start,:] += -np.eye(k)*springVector\n",
     "        \n",
     "    H = H.reshape((N*k,N*k))\n",
     "    \n",
