--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -73,16 +73,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import ceil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot2d(R, v, scale=.5):\n",
-    "\n",
+    "    numCols = ceil(len(v)/3)\n",
+    "    plt.subplots(numCols, 3, sharex=True, sharey=True, figsize=(15, 4))\n",
     "    for i in range(len(v)):\n",
+    "        plt.subplot(numCols, 3, i+1)\n",
     "        if np.allclose(v[i], np.zeros(v.shape[1])): continue\n",
     "        plt.xlim((-1.5,1.5))\n",
     "        plt.ylim((-1.5,1.5))\n",
     "        for j in range(len(R)):\n",
     "            x, y, = R[j]\n",
     "            plt.arrow(x,y, v[i,j*2]*scale, v[i,j*2+1]*scale, width=scale*.1)        \n",
-    "        plt.show()"
+    "    plt.show()"
    ]
   },
   {
