--- a/experimental/two springs in 2d - off axis.ipynb
+++ b/experimental/two springs in 2d - off axis.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "R = np.array([\n",
-    "    [0., 0],\n",
-    "    [1, 1],\n",
-    "    [-1, 1],\n",
+    "    [-1, 0],\n",
+    "    [0, 0],\n",
+    "    [1, 0],\n",
     "])"
    ]
   },
@@ -37,7 +37,161 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "springs = [(0,1),(0,2)]"
+    "springs = [(0,1),(1,2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [0, 1.],\n",
+    "    [0, 0],\n",
+    "    [0, -1],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [0, 1.],\n",
+    "    [0, 1],\n",
+    "    [0, 1],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [1., 0],\n",
+    "    [1., 0],\n",
+    "    [1., 0],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [0, 1.],\n",
+    "    [0, -2.],\n",
+    "    [0, 1],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [-1, 0],\n",
+    "    [0, 0],\n",
+    "    [1, 0.],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [1., 0],\n",
+    "    [-1, 0],\n",
+    "    [1, 0.],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displacements = np.array([\n",
+    "    [0., 0],\n",
+    "    [0, 0],\n",
+    "    [3, 0.],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(R, springs, displacements)"
    ]
   },
   {
