using v@v.T instead of I*v

--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -139,20 +139,27 @@
     "    \n",
     "    # calculate H\n",
     "    H = np.zeros((N,k,N,k))\n",
-    "    for i, (start, stop) in enumerate(springs):\n",
-    "        # strength of spring in each dimen.\n",
-    "        springVector = np.abs(R[stop]-R[start])\n",
-    "        springVector /= np.linalg.norm(springVector)\n",
+    "#     for i, (start, stop) in enumerate(springs):\n",
+    "#         # strength of spring in each dimen.\n",
+    "#         springVector = np.abs(R[stop]-R[start])\n",
+    "#         springVector /= np.linalg.norm(springVector)\n",
     "                \n",
-    "        # force on x1 connected to x2\n",
-    "        #   is k(x2-x1)  \n",
-    "        H[start,:,start,:] += np.eye(k)*springVector\n",
-    "        H[stop,:,stop,:] += np.eye(k)*springVector\n",
-    "        H[start,:,stop,:] += -np.eye(k)*springVector\n",
-    "        H[stop,:,start,:] += -np.eye(k)*springVector\n",
-    "        \n",
+    "#         # force on x1 connected to x2\n",
+    "#         #   is k(x2-x1)  \n",
+    "#         H[start,:,start,:] += np.eye(k)*springVector\n",
+    "#         H[stop,:,stop,:] += np.eye(k)*springVector\n",
+    "#         H[start,:,stop,:] += -np.eye(k)*springVector\n",
+    "#         H[stop,:,start,:] += -np.eye(k)*springVector\n",
+    "    for i, (start_,stop_) in enumerate(springs):\n",
+    "        v = (R[stop_]-R[start_]).reshape(-1,1)\n",
+    "        s = np.sign(v[0,0])\n",
+    "        if s==0.: s = 1.\n",
+    "        for start, stop in [(start_,stop_),(stop_,start_)]:\n",
+    "            H[start,:,start,:] += v@v.T*s\n",
+    "            H[stop,:,start,:] += -v@v.T*s\n",
+    "\n",
     "    H = H.reshape((N*k,N*k))\n",
-    "    \n",
+    "\n",
     "    # get eigenvalues\n",
     "    l, v = np.linalg.eigh(H)\n",
     "    v = v.T\n",
