--- a/demonstration/five springs NOT coplanar 3d.ipynb
+++ b/demonstration/five springs NOT coplanar 3d.ipynb
@@ -65,6 +65,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "l.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot(R, D[6:], 10)"
    ]
   },
@@ -83,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(R, v[l<.1])"
+    "plot(R, v[np.abs(l)<.01])"
    ]
   },
   {
