--- a/demonstration/two springs in 2d - off axis.ipynb
+++ b/demonstration/two springs in 2d - off axis.ipynb
@@ -108,7 +108,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "H.round(3)"
+   ]
   },
   {
    "cell_type": "code",
