rerun/visualizing 2d MC

--- a/MCMC/hamiltonian mcmc - two dimensions.ipynb
+++ b/MCMC/hamiltonian mcmc - two dimensions.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Starting with harmonic well"
+    "### defining a potential function"
    ]
   },
   {
@@ -55,146 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Target distribution is proportional to: `exp(-U)`.\n",
-    "def unnormalized_log_prob(x):\n",
-    "    return -x**2 # this should be the energy function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the HMC transition kernel.\n",
-    "num_results = int(1e4)\n",
-    "num_burnin_steps = int(1e3)\n",
-    "adaptive_hmc = tfp.mcmc.SimpleStepSizeAdaptation(\n",
-    "    tfp.mcmc.HamiltonianMonteCarlo(\n",
-    "        target_log_prob_fn=unnormalized_log_prob,\n",
-    "        num_leapfrog_steps=3,\n",
-    "        step_size=1.),\n",
-    "    num_adaptation_steps=int(num_burnin_steps * 0.8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run the chain (with burn-in).\n",
     "@tf.function\n",
-    "def run_chain():\n",
-    "    # Run the chain (with burn-in).\n",
-    "    samples = tfp.mcmc.sample_chain(\n",
-    "        num_results=num_results,\n",
-    "        num_burnin_steps=num_burnin_steps,\n",
-    "        current_state=1.,\n",
-    "        kernel=adaptive_hmc,\n",
-    "        return_final_kernel_results=True,\n",
-    "        trace_fn=None)\n",
-    "\n",
-    "    return samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = run_chain()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(s.all_states.numpy(), bins=100);"
+    "def potential(displacements):\n",
+    "    return displacements**2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now with a stronger well"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Target distribution is proportional to: `exp(-U)`.\n",
-    "def unnormalized_log_prob(x):\n",
-    "    return -x**4 # this should be the energy function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the HMC transition kernel.\n",
-    "num_results = int(2e4)\n",
-    "num_burnin_steps = int(1e3)\n",
-    "adaptive_hmc = tfp.mcmc.SimpleStepSizeAdaptation(\n",
-    "    tfp.mcmc.HamiltonianMonteCarlo(\n",
-    "        target_log_prob_fn=unnormalized_log_prob,\n",
-    "        num_leapfrog_steps=3,\n",
-    "        step_size=1.),\n",
-    "    num_adaptation_steps=int(num_burnin_steps * 0.8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run the chain (with burn-in).\n",
-    "@tf.function\n",
-    "def run_chain():\n",
-    "    # Run the chain (with burn-in).\n",
-    "    samples = tfp.mcmc.sample_chain(\n",
-    "        num_results=num_results,\n",
-    "        num_burnin_steps=num_burnin_steps,\n",
-    "        current_state=1.,\n",
-    "        kernel=adaptive_hmc,\n",
-    "        return_final_kernel_results=True,\n",
-    "        trace_fn=None)\n",
-    "\n",
-    "    return samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = run_chain()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(s.all_states.numpy(), bins=100);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now with a square well"
+    "### plug into HMCMC"
    ]
   },
   {
@@ -206,7 +76,7 @@
     "# Target distribution is proportional to: `exp(-U)`.\n",
     "@tf.function\n",
     "def unnormalized_log_prob(x):\n",
-    "    return -x**100"
+    "    return -1.*potential(x) # this should be the energy function"
    ]
   },
   {
@@ -239,12 +109,19 @@
     "    samples = tfp.mcmc.sample_chain(\n",
     "        num_results=num_results,\n",
     "        num_burnin_steps=num_burnin_steps,\n",
-    "        current_state=1.,\n",
+    "        current_state=tf.ones(4),\n",
     "        kernel=adaptive_hmc,\n",
     "        return_final_kernel_results=True,\n",
     "        trace_fn=None)\n",
     "\n",
     "    return samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize"
    ]
   },
   {
@@ -262,7 +139,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(s.all_states.numpy(), bins=100);"
+    "X = s.all_states.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = np.array([\n",
+    "    [0., 0.],\n",
+    "    [3., 3.],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(R.shape[0]):\n",
+    "    r = (i*2-1)/R.shape[0]\n",
+    "    cmap = sns.cubehelix_palette(light=1, rot=r, as_cmap=True)\n",
+    "\n",
+    "    ax = sns.kdeplot(R[i,0]+X[:,i*R.shape[1]], \n",
+    "                     R[i,1]+X[:,i*R.shape[1]+1], \n",
+    "                     cmap=cmap, \n",
+    "                     shade=True, shade_lowest=False)"
    ]
   },
   {
