another cleaning sweep

--- a/MCMC/hamiltonian mcmc - two dimensions.ipynb
+++ b/MCMC/hamiltonian mcmc - two dimensions.ipynb
@@ -16,7 +16,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
    ]
   },
   {
@@ -46,6 +55,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### defining essentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = np.array([\n",
+    "    [0., 0.],\n",
+    "    [3., 3.],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### defining a potential function"
    ]
   },
@@ -57,6 +92,8 @@
    "source": [
     "@tf.function\n",
     "def potential(displacements):\n",
+    "    pos = tf.constant(R)\n",
+    "    #springs = [(0, 1)]\n",
     "    return displacements**2"
    ]
   },
@@ -140,36 +177,6 @@
    "outputs": [],
    "source": [
     "X = s.all_states.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R = np.array([\n",
-    "    [0., 0.],\n",
-    "    [3., 3.],\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns"
    ]
   },
   {
