--- a/MCMC/hamiltonian mcmc - one dimension.ipynb
+++ b/MCMC/hamiltonian mcmc - one dimension.ipynb
@@ -271,6 +271,81 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now with a double well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Target distribution is proportional to: `exp(-U)`.\n",
+    "@tf.function\n",
+    "def unnormalized_log_prob(x):\n",
+    "    return -x**100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the HMC transition kernel.\n",
+    "num_results = int(2e4)\n",
+    "num_burnin_steps = int(2e3)\n",
+    "adaptive_hmc = tfp.mcmc.SimpleStepSizeAdaptation(\n",
+    "    tfp.mcmc.HamiltonianMonteCarlo(\n",
+    "        target_log_prob_fn=unnormalized_log_prob,\n",
+    "        num_leapfrog_steps=3,\n",
+    "        step_size=1.),\n",
+    "    num_adaptation_steps=int(num_burnin_steps * 0.8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the chain (with burn-in).\n",
+    "@tf.function\n",
+    "def run_chain():\n",
+    "    # Run the chain (with burn-in).\n",
+    "    samples = tfp.mcmc.sample_chain(\n",
+    "        num_results=num_results,\n",
+    "        num_burnin_steps=num_burnin_steps,\n",
+    "        current_state=1.,\n",
+    "        kernel=adaptive_hmc,\n",
+    "        return_final_kernel_results=True,\n",
+    "        trace_fn=None)\n",
+    "\n",
+    "    return samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = run_chain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(s.all_states.numpy(), bins=100);"
+   ]
   }
  ],
  "metadata": {
