--- a/Calculating.ipynb
+++ b/Calculating.ipynb
@@ -15,18 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def projectOut(basis, vector):\n",
-    "    projection = basis * (basis@vector)\n",
-    "    vector = vector - projection\n",
-    "    return vector, np.linalg.norm(vector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# calc inertia axes\n",
     "def inertiaAxes3d(x,y,z):\n",
     "    I = np.empty((3,3))\n",
@@ -109,23 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def potential(R, springs, displacements):\n",
-    "    V = 0\n",
-    "    for i, (start, stop) in enumerate(springs):\n",
-    "        springVector = R[stop]-R[start]\n",
-    "        moveVector = np.abs(displacements[stop]-displacements[start])\n",
-    "        v = moveVector - moveVector*(moveVector@springVector)/(springVector@springVector)\n",
-    "        V += .5 * 1 * (v@v)\n",
-    "    return V"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc(R, springs, threshold=0.01):\n",
+    "def calc(R, springs, threshold=0.0001):\n",
     "    \n",
     "    # get parameters\n",
     "    N = R.shape[0]\n",
@@ -150,8 +122,8 @@
     "#         H[stop,:,stop,:] += np.eye(k)*springVector\n",
     "#         H[start,:,stop,:] += -np.eye(k)*springVector\n",
     "#         H[stop,:,start,:] += -np.eye(k)*springVector\n",
-    "    for i, (start_,stop_) in enumerate(springs):\n",
-    "        v = (R[stop_]-R[start_]).reshape(-1,1)\n",
+    "    for i, (start_,stop_, strength) in enumerate(springs):\n",
+    "        v = (strength*(R[stop_]-R[start_])).reshape(-1,1)\n",
     "        s = np.sign(v[0,0])\n",
     "        if s==0.: s = 1.\n",
     "        for start, stop in [(start_,stop_),(stop_,start_)]:\n",
