--- a/MCMC/hamiltonian mcmc - two dimensions.ipynb
+++ b/MCMC/hamiltonian mcmc - two dimensions.ipynb
@@ -89,12 +89,113 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "@tf.function\n",
+    "tf.norm?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.unstack?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def potential(displacements):\n",
-    "    pos = tf.constant(R)\n",
-    "    #springs = [(0, 1)]\n",
-    "    return displacements**2"
+    "    total = 0\n",
+    "    springs = [(0,1)]\n",
+    "    displacements = tf.unstack(displacements, num=2,axis=0)\n",
+    "    print(displacements)\n",
+    "#     for i,(start,stop) in enumerate(springs):\n",
+    "#         move = R[stop]-R[start] + (displacements[stop]-displacements[start])\n",
+    "#         for j in range(len(move)):\n",
+    "#             total += move[i]**2\n",
+    "#         total -= 1.\n",
+    "    return 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(np.array([0, 0, 0., 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential([-1, -1, 1., 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential([1, 1, 1., 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential([1, -1, -1., 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential([1, 1, -1., -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential([0, 1, -1, 0.])"
    ]
   },
   {
