--- a/demonstration/single spring in 2d.ipynb
+++ b/demonstration/single spring in 2d.ipynb
@@ -45,7 +45,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "springs = [(*x,z) for (x,z) in zip(springs,np.ones(len(springs)))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "H, l, v, D = calc(R, springs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H.round(3)"
    ]
   },
   {
