--- a/demonstration/single spring in 3d.ipynb
+++ b/demonstration/single spring in 3d.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "springs = [(0,1)]"
+    "springs = [(0,1,1)]"
    ]
   },
   {
@@ -46,6 +46,15 @@
    "outputs": [],
    "source": [
     "H, l, v, D = calc(R, springs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H.round(3)"
    ]
   },
   {
