--- a/demonstration/two springs in 2d - off axis.ipynb
+++ b/demonstration/two springs in 2d - off axis.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "springs = [(0,1),(0,2)]"
+    "springs = [(0,1,1),(0,2,1)]"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l.round(3)"
+    "H.round(2)"
    ]
   },
   {
@@ -82,24 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l.round(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[potential(R, springs, d.reshape(-1,2)).round(3) for d in D]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plot(R, v, .5)"
    ]
   },
@@ -109,7 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H.round(3)"
+    "move =  np.array([0., -2, 0, 1, 0, 1])\n",
+    "move /= np.linalg.norm(move)\n",
+    "move = move.reshape(-1,1)\n",
+    "move.round(2)"
    ]
   },
   {
@@ -118,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potential(R, springs, D[-1].reshape(-1,2))"
+    "(D @ move).round(2)"
    ]
   },
   {
@@ -127,25 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(np.arange(0,1,.01), [potential(R, springs, x*D[2].reshape(-1,2)) for x in np.arange(0,1,.01)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(np.arange(0,1,.01), [potential(R, springs, x*D[-1].reshape(-1,2)) for x in np.arange(0,1,.01)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(np.arange(0,1,.01), [potential(R, springs, x*D[-2].reshape(-1,2)) for x in np.arange(0,1,.01)])"
+    "(v @ move).round(2)"
    ]
   },
   {
