i don't know what to do??

--- a/MCMC/hamiltonian mcmc - one dimension.ipynb
+++ b/MCMC/hamiltonian mcmc - one dimension.ipynb
@@ -288,7 +288,12 @@
     "# Target distribution is proportional to: `exp(-U)`.\n",
     "@tf.function\n",
     "def unnormalized_log_prob(x):\n",
-    "    return -x**100"
+    "    a = -x**2\n",
+    "    b = -(x-2)**2\n",
+    "    if a<b:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return a"
    ]
   },
   {
@@ -346,6 +351,13 @@
    "source": [
     "plt.hist(s.all_states.numpy(), bins=100);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
