HMCMC improvement - now it's naptime

--- a/MCMC/single spring in 2d.ipynb
+++ b/MCMC/single spring in 2d.ipynb
@@ -67,7 +67,7 @@
     "R = np.array([\n",
     "    [0., 0.],\n",
     "    [3., 3.],\n",
-    "])"
+    "], np.float32)"
    ]
   },
   {
@@ -89,68 +89,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.norm?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.unstack?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def potential(displacements):\n",
-    "    total = 0\n",
+    "    N,k = R.shape\n",
+    "    total = 0.\n",
     "    springs = [(0,1)]\n",
-    "    displacements = tf.unstack(displacements, num=2,axis=0)\n",
-    "    print(displacements)\n",
-    "#     for i,(start,stop) in enumerate(springs):\n",
-    "#         move = R[stop]-R[start] + (displacements[stop]-displacements[start])\n",
-    "#         for j in range(len(move)):\n",
-    "#             total += move[i]**2\n",
-    "#         total -= 1.\n",
-    "    return 0."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "potential(np.array([0, 0, 0., 0]))"
+    "    D = np.zeros((3,R.shape[0]*R.shape[1]),np.float32)\n",
+    "    for i in range(2): D[i,i::2] = 1.\n",
+    "    D[2] = np.array([-1, 1., 1, -1], np.float32)\n",
+    "    for i in range(3):\n",
+    "        D[i] = D[i]/np.linalg.norm(D[i])\n",
+    "        total += 10. * tf.abs(tf.tensordot(D[i],displacements,1))\n",
+    "\n",
+    "    displacements = tf.reshape(displacements, R.shape)\n",
+    "    for i,(start,stop) in enumerate(springs):\n",
+    "        springs = R[stop]-R[start]\n",
+    "        move = displacements[stop]-displacements[start]\n",
+    "        springs = springs/np.linalg.norm(springs)\n",
+    "        for j in range(len(move)):\n",
+    "            total += tf.tensordot(move,springs,1)**2\n",
+    "        \n",
+    "    return total"
    ]
   },
   {
@@ -159,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potential([-1, -1, 1., 1])"
+    "potential(np.array([0, 0, 0., 0],np.float32))"
    ]
   },
   {
@@ -168,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potential([1, 1, 1., 1])"
+    "potential(np.array([-1, -1, 1., 1],np.float32))"
    ]
   },
   {
@@ -177,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potential([1, -1, -1., 1])"
+    "potential(np.array([1, 1, 1., 1],np.float32))"
    ]
   },
   {
@@ -186,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potential([1, 1, -1., -1])"
+    "potential(np.array([1, -1, -1., 1],np.float32))"
    ]
   },
   {
@@ -195,7 +154,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potential([0, 1, -1, 0.])"
+    "potential(np.array([1, 1, -1., -1],np.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potential(np.array([0, 1, -1, 0.],np.float32))"
    ]
   },
   {
